{
    "version": 1,
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "1ef4b718-6a9b-40db-ad69-0a9db51ae16a",
            "actions": [
                {
                    "name": "RightPaddleMovement",
                    "type": "Value",
                    "id": "24de5a2f-22e0-4012-88a4-7893c46e52ec",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftPaddleMovement",
                    "type": "Value",
                    "id": "63f3aad8-8823-4981-816a-e95b328aad47",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "61a28a74-fb91-4035-b6eb-33f319aa2dde",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPaddleMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "a6538104-43cb-46c7-bab4-68f2171ecf80",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPaddleMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "04da920a-2bc5-4a33-adf6-6bae9540b105",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPaddleMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "36a48363-1c82-4b65-b305-b7dae561bd1d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPaddleMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Face Buttons",
                    "id": "5c71c14e-9422-4677-a1a5-4ae3fc0e1516",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPaddleMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c850b6b9-e88e-44fe-bc68-a197f10b040b",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPaddleMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d23a45fc-a239-40df-8b6f-53736272af48",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPaddleMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8185cb87-c7a8-4c57-b583-974d13f768d5",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPaddleMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "c714ccfd-b12e-4f8d-9a70-d4a3ee640d05",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPaddleMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "28725a7e-8e42-45a8-8d89-54fd31af85ca",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPaddleMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5c0ec881-ce1b-441f-a7cd-a16cb6079487",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPaddleMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Dpad",
                    "id": "1bbae607-9b24-4055-9ab4-2cafc8f3dbe8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPaddleMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d4047705-2442-4a4d-9e27-455f2e9afec3",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPaddleMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "dae714c9-f3be-4418-a6bb-c77a6a2e09c0",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPaddleMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Menu",
            "id": "00555ed3-da3e-4d32-8500-e2e058267c6a",
            "actions": [
                {
                    "name": "StartGame",
                    "type": "Button",
                    "id": "0af2a89f-3198-4442-948a-29f77859b6d7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8dd6a713-9b70-4209-a90e-3824c513f6df",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37649b48-e909-4f04-aa78-4e2e37b23812",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}